--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%2310b981' stroke-width='2'><rect x='4' y='8' width='16' height='12' rx='2'/><path d='M12 2v6'/><circle cx='12' cy='2' r='1'/><path d='M8 12h0.01'/><path d='M16 12h0.01'/><path d='M9 16h6'/><path d='M4 16h-2'/><path d='M22 16h-2'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>health</title>
+    <title>CareBot</title>
   </head>
   <body>
     <div id="root"></div>
